Restructure the power system